# WarpMe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  description.txt  notes.txt
docs/: WarpMe_manual_ITA.tex  quickStart.docx
src/: main.cpp
src/geom/: Grid.cpp  Grid.hpp
src/mail/: emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimeattachment.h  mimecontentformatter.cpp  mimecontentformatter.h  mimefile.cpp  mimefile.h  mimehtml.cpp  mimehtml.h  mimeinlinefile.cpp  mimeinlinefile.h  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimemultipart.h  mimepart.cpp  mimepart.h  mimetext.cpp  mimetext.h  quotedprintable.cpp  quotedprintable.h  smtpclient.cpp  smtpclient.h  smtpexports.h
src/qt/: MainView.cpp  MainView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/qtTouch/: FacebookManager.cpp  FacebookManager.hpp  FacebookManager.ui  Keyboard.cpp  Keyboard.hpp  KeyboardButton.cpp  KeyboardButton.hpp  MailManager.cpp  MailManager.hpp  MailManager.ui  MainWindowTouch.cpp  MainWindowTouch.hpp  MainWindowTouch.ui  NewPicture.cpp  NewPicture.hpp  NewPicture.ui  PaperConstants.hpp  WebcamManager.cpp  WebcamManager.hpp  WebcamManager.ui
src/resource/: icons.qrc  main.qrc  opencv.qrc  pics.qrc  sounds.qrc
src/resource/icons/: icons.ai
src/resource/img/: usi_logo.eps
src/resource/print/: layer23.eps  layer46.eps  logo_sticker.eps
src/resource/shaders/: circle.frag  circle.vert  color.frag  color.vert  shader.frag  shader.vert
